<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/race_text_view"
        android:layout_width="75dp"
        android:layout_height="24dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/race_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_edit_text" />

    <Spinner
        android:id="@+id/race_spinner"
        android:layout_width="138dp"
        android:layout_height="37dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/race_text_view" />

    <TextView
        android:id="@+id/class_text_view"
        android:layout_width="76dp"
        android:layout_height="23dp"
        android:layout_marginEnd="108dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="108dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/class_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.99"
        app:layout_constraintStart_toEndOf="@+id/race_text_view"
        app:layout_constraintTop_toBottomOf="@+id/level_edit_text" />

    <Spinner
        android:id="@+id/class_spinner"
        android:layout_width="137dp"
        android:layout_height="37dp"
        android:layout_marginEnd="48dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/race_spinner"
        app:layout_constraintTop_toBottomOf="@+id/class_text_view" />

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="183dp"
        android:layout_height="49dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/name_text_hint"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/level_edit_text"
        android:layout_width="134dp"
        android:layout_height="49dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/level_text_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toEndOf="@+id/name_edit_text"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/sub_class_spinner"
        android:layout_width="140dp"
        android:layout_height="39dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sub_class_text" />

    <TextView
        android:id="@+id/sub_class_text"
        android:layout_width="95dp"
        android:layout_height="31dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/sub_class_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/race_spinner" />

    <TextView
        android:id="@+id/alignment_text"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:layout_marginEnd="92dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="92dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/alignment_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.963"
        app:layout_constraintStart_toEndOf="@+id/sub_class_text"
        app:layout_constraintTop_toBottomOf="@+id/class_spinner" />

    <Spinner
        android:id="@+id/alignment_spinner"
        android:layout_width="142dp"
        android:layout_height="39dp"
        android:layout_marginEnd="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/sub_class_spinner"
        app:layout_constraintTop_toBottomOf="@+id/alignment_text" />

    <EditText
        android:id="@+id/background_edit_text"
        android:layout_width="182dp"
        android:layout_height="42dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/background_edit_text"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sub_class_spinner" />

</android.support.constraint.ConstraintLayout>